minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
    security.openshift.io/scc.podSecurityLabelSync: 'false'
    kubernetes.io/metadata.name: minio
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.24
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.24
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.24
