minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      name: minio
  template:
    metadata:
      labels:
        name: minio
    spec:
      serviceAccount: minio-sa
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          command:
          - /bin/bash
          - -c
          args: 
          - minio server /data --console-address :9090
          volumeMounts:
          - mountPath: /data
            name: minio-data
      restartPolicy: Always
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-pvc
