minio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console
  namespace: minio
spec:
  port:
    targetPort: console
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  namespace: minio
spec:
  port:
    targetPort: api
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
